# ancientgreek.jean.land

./: .env.example  .gitignore  LICENSE  README.md  SPEC.md  pyproject.toml
backend/: config.py  db.py  main.py
backend/data/texts/: catalog.json
backend/models/: dictionary.py  texts.py
backend/routers/: dictionary.py  texts.py
backend/services/: citation.py  logeion.py  paradigms.py  perseus.py  syntax.py  text_sources.py  translate.py  transliterate.py
frontend/: index.html  package-lock.json
frontend/public/: about.md
frontend/public/fonts/: README.md
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/about/: AboutPage.tsx
frontend/src/components/dictionary/: DictionaryEntryCard.tsx  DictionarySearch.tsx  LogeionTabs.tsx  MorphologyCard.tsx
frontend/src/components/shared/: GreekText.tsx  HighlightPopup.tsx  Sidebar.tsx
frontend/src/components/texts/: TextCatalog.tsx  TextReader.tsx  titleDisplay.ts
frontend/src/components/workbench/: WorkbenchPanel.tsx
frontend/src/hooks/: useDictionary.ts  useTextSelection.ts
frontend/src/stores/: appStore.ts
tests/backend/: test_dictionary.py  test_texts.py
